<resources>
    <string name="app_name">Quiz1</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="div">/</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="ok">Ok</string>
    <string name="type_your_name">Type your name</string>
    <string name="cancel">cancel</string>
    <string name="type_name">Type Name</string>
    <string name="type_age">Type Age</string>
    <string name="type_phone">Type Phone</string>
    <string name="submit">Submit</string>
    <string name="your_data">Your Data</string>
    <string name="exit">exit</string>
</resources>
