<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="mx.edu.utng.dloza.practica1.FormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_name"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name"
        android:textColor="@color/color_2"
        android:inputType="textPersonName"
        android:textSize="@dimen/size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color"
        android:text="@string/type_age"
        android:textSize="@dimen/size"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_age"
        android:inputType="number"
        android:textColor="@color/color_2"
        android:textSize="@dimen/size"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_phone"
        android:textColor="@color/color"
        android:textSize="@dimen/size"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_phone"
        android:textColor="@color/color_2"
        android:inputType="phone"
        android:textSize="@dimen/size"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="@dimen/size"
        android:textColor="@color/color"
        android:background="@color/background_button"
        android:id="@+id/btn_submit"
        />


</LinearLayout>
